# xdiff

./: Cargo.toml
examples/: config.rs  flatten.rs  serde.rs  similar.rs
fixtures/: test.yml  xreq.yml
src/: cli.rs  config.rs  console.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
